# movieSnaps

./: .gitignore  Dockerfile  agent.py  api_handler.py  available_movies.txt  build_movie_list.py  config.py  deploy.py  deploy_api.py  deploy_refresh.py  discover_movies.py  enqueue.py  lambda_handler.py  manage_queue.py  movies.py  pipeline.py  probe_site.py  pyproject.toml  refresh_images.py  scraper.py  storage.py  update_similar_movies.py  verify_movies.py  wipe_leaderboard.py
.kiro/specs/movie-screencaps-scraper/: requirements.md
