[project]
name = "movie-screencaps-scraper"
version = "0.1.0"
description = "Web scraper for movie-screencaps.com with AI agent handoff"
authors = [
    {name = "Lane Hensley"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "boto3 (>=1.42.83,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
